k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
     component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
      - name: frontend
        image: hudsonfranca/anuncios-frontend
        ports:
        - containerPort: 3000
