k8s/backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: backend-cluster-ip-service
spec:
  selector:
    component: backend
  ports:
  - port: 80
    targetPort: 3000
