k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
  - port: 5432
    targetPort: 5432
