k8s/frontent-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
spec:
  selector:
    component: frontend
  ports:
  - port: 5000
    targetPort: 3000
