k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: anunciosapp
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: backend-cluster-ip-service
              servicePort: 80
          - path: /?(.*)
            backend:
              serviceName: frontend-cluster-ip-service
              servicePort: 5000
